Revert "Attempt to move Jekyll customizations to subdir to fix them not showing."
This reverts commit 36695f20d4e317ba57c265f17157b97f9ebc477d.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,3 @@
 .page-header {
     background: url('/img/background-o.jpg');
 }
-
-a#skip-to-content {
-    position: absolute;
-    color: transparent;
-}
